Add LinkedIn and Google Scholar links to layout

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,9 +17,10 @@
             <div class="social-links">
                 <a href="mailto:{{ site.email }}" title="Email"><i class="fas fa-envelope"></i></a>
                 {% if site.github_username %}
+                <a href="https://www.linkedin.com/in/danielleripsman/" title="LinkedIn" target="_blank"><i class="fab fa-linkedin"></i></a>
+                <a href="https://scholar.google.com/citations?hl=en&user=29TV-goAAAAJ" title="Google Scholar" target="_blank"><i class="fas fa-graduation-cap"></i></a>
                 <a href="https://github.com/{{ site.github_username }}" title="GitHub" target="_blank"><i class="fab fa-github"></i></a>
                 {% endif %}
-                <a href="https://scholar.google.com/citations?hl=en&user=29TV-goAAAAJ" title="Google Scholar" target="_blank"><i class="fas fa-graduation-cap"></i></a>
                 <!-- Add more social links here if needed -->
             </div>
         </div>
