--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,7 +36,7 @@
                 <li><a href="{{ "/service/" | relative_url }}" class="{% if page.url contains '/service/' %}active{% endif %}">Service</a></li>
                 <li><a href="{{ "/publications/" | relative_url }}" class="{% if page.url contains '/publications/' %}active{% endif %}">Publications</a></li>
                 <li><a href="{{ "/presentations/" | relative_url }}" class="{% if page.url contains '/presentations/' %}active{% endif %}">Presentations</a></li>
-                <li><a href="{{ "/videos/" | relative_url }}" class="{% if page.url contains '/videos/' %}active{% endif %}">Videos</a></li>
+                <!-- <li><a href="{{ "/videos/" | relative_url }}" class="{% if page.url contains '/videos/' %}active{% endif %}">Videos</a></li> -->
                 <li><a href="{{ "/cv/" | relative_url }}" class="{% if page.url contains '/cv/' %}active{% endif %}">CV</a></li>
             </ul>
         </div>
