--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -300,6 +300,7 @@ h2 {
     display: block;             /* Ensures it sits on its own line */
 }
 
+/* For hosting images in gallery */
 .project-gallery-icons {
     display: flex;
     gap: 10px;
