--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -585,6 +585,11 @@ details[open] .toggle-chevron {
     align-self: start; /* Prevents items from stretching to match height */
 }
 
+.mentee-header {
+    display: flex;
+    justify-content: space-between;
+}
+
 .award-card.card {
     border-left: 5px solid #b8860b; /* A soft gold/bronze border */
     background-color: #fffdf5;     /* Very faint gold tint */
